--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Tegar-Onee-chann /Hoream-MD.git"
+    "url": "git+https://github.com/Tegar-Onee-chann/Hoream-MD.git"
   },
   "bugs": {
     "url": "https://github.com/Tegar-Onee-chann/Hoream-MD/issues"
